--- a/train_flappy_bird.ipynb
+++ b/train_flappy_bird.ipynb
@@ -7,13 +7,21 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Clone the repository and install requirements\n",
-    "import subprocess\n",
-    "\n",
     "!git clone https://github.com/LuckyBoy587/Flappy-Bird-AI.git\n",
     "!cd Flappy-Bird-AI\n",
-    "# Install requirements\n",
-    "subprocess.run(['pip', 'install', '-r', 'requirements.txt'])"
+    "\n",
+    "!pip install -q pygame==2.5.2 numpy==1.24.3 torch"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "ef2a6259",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "os.listdir()"
    ]
   },
   {
