feat: Implement multi-bird training for Flappy Bird AI
- Added `vector_env.py` to manage multiple Flappy Bird environments for population-based training.
- Created `main.py` for an interactive menu allowing users to choose between single and multi-bird training modes.
- Developed `demo_multi_bird.py` for quick demonstrations of multi-bird training and comparisons with single-bird training.
- Introduced `QUICKSTART_MULTIBIRD.md` and `MULTI_BIRD_TRAINING.md` for comprehensive documentation on new features.
- Enhanced `bird_ai.py` with a new `train_dqn_vectorized()` function for multi-bird training while maintaining backward compatibility.
- Added `verify_setup.py` to ensure the training setup is correctly configured and functioning.

--- a/train_flappy_bird.ipynb
+++ b/train_flappy_bird.ipynb
@@ -31,8 +31,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "from bird_ai import train_dqn\n",
-    "train_dqn()"
+    "from bird_ai import train_dqn_vectorized\n",
+    "train_dqn_vectorized()"
    ]
   }
  ],
